Redefined ExtenSize and EnableNegativeScrolling functionality ScrollContainer public on RichItemsControl

--- a/RichCanvasDemo/MainWindow.xaml
+++ b/RichCanvasDemo/MainWindow.xaml
@@ -322,9 +322,7 @@
                                      AutoPanTickRate="{Binding AutoPanTickRate, Converter={StaticResource StringToFloatConverter}}"
                                      TranslateOffset="{Binding TranslateOffset, Mode=TwoWay}"
                                      RealTimeSelectionEnabled="True"
-                                     RealTimeDraggingEnabled="True"
-                                     ExtentSize="10,10"
-                                     EnableNegativeScrolling="False">
+                                     RealTimeDraggingEnabled="True">
 
             <richCanvas:RichItemsControl.ContextMenu>
                 <ContextMenu>
