Added UI automation test project, using FlaUI nuget + exposed AutomationPeer for RichItemsControl and RichItemContainer

--- a/RichCanvasDemo/MainWindow.xaml
+++ b/RichCanvasDemo/MainWindow.xaml
@@ -238,6 +238,7 @@
                         HorizontalAlignment="Right" />
 
                 <Button Content="Draw Rect"
+                        AutomationProperties.AutomationId="DrawRectButton"
                         Command="{Binding DrawRectCommand}"
                         Width="120"
                         Height="30"
