UI tests updates: -added more information on Value Pattern data -added extension methods for Window and Application classes for reusability and cleaner code -added ui tests for DrawingState -started RichItemContainerTests class -modified demo app to support testing

--- a/RichCanvasDemo/MainWindow.xaml
+++ b/RichCanvasDemo/MainWindow.xaml
@@ -247,6 +247,7 @@
 
                 <Button Content="Resize"
                         Command="{Binding ResizeCommand}"
+                        AutomationProperties.AutomationId="AddDrawnRectangle"
                         MinWidth="120"
                         Height="30"
                         HorizontalAlignment="Right"
@@ -266,8 +267,9 @@
                         HorizontalAlignment="Right"
                         Grid.Row="4" />
 
-                <Button Content="Delete"
+                <Button Content="Clear All Items"
                         Command="{Binding DeleteCommand}"
+                        AutomationProperties.AutomationId="ClearItems"
                         Width="120"
                         Height="30"
                         HorizontalAlignment="Right"
