--- a/RichCanvasTestApp/MainWindow.xaml
+++ b/RichCanvasTestApp/MainWindow.xaml
@@ -1,5 +1,6 @@
 ﻿<Window x:Class="RichCanvasTestApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:s="clr-namespace:System;assembly=mscorlib"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,11 +10,9 @@
         xmlns:converters="clr-namespace:RichCanvasTestApp.Converters"
         xmlns:helpers="clr-namespace:RichCanvasTestApp.Helpers"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:views="clr-namespace:RichCanvasTestApp.CustomControls"
         xmlns:behaviors="clr-namespace:RichCanvasTestApp.Helpers.Behaviors"
         xmlns:gestures="clr-namespace:RichCanvas.Gestures;assembly=RichCanvas"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         x:Name="window"
         Title="MainWindow"
@@ -31,6 +30,8 @@
     </Window.DataContext>
 
     <Window.Resources>
+        <s:Boolean x:Key="FalseValue">False</s:Boolean>
+        <s:Boolean x:Key="TrueValue">True</s:Boolean>
         <local:PointToStringConverter x:Key="PointToStringConverter" />
         <converters:StringToFloatConverter x:Key="StringToFloatConverter" />
         <converters:CommandToListConverter x:Key="CommandsToListConverter" />
@@ -210,11 +211,13 @@
                           md:HintAssist.IsFloating="True">
                 </ComboBox>
             </StackPanel>
-            --><!--<StackPanel Grid.Row="9">
+            -->
+        <!--<StackPanel Grid.Row="9">
                 <TextBox Text="{Binding TranslateOffset, Mode=TwoWay}"
                          md:HintAssist.Hint="Translate Offset"
                          md:HintAssist.IsFloating="True" />
-            </StackPanel>--><!--
+            </StackPanel>-->
+        <!--
         </Grid>-->
 
         <!--ACTIONS-->
@@ -223,65 +226,72 @@
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
+                <StackPanel>
+                    <Button Content="Draw Line"
+                            Command="{Binding DrawLineCommand}"
+                            Width="120"
+                            Height="30"
+                            HorizontalAlignment="Right" />
 
-                <Button Content="Draw Line"
-                        Command="{Binding DrawLineCommand}"
-                        Width="120"
-                        Height="30"
-                        HorizontalAlignment="Right" />
+                    <Button Content="Draw Rect"
+                            AutomationProperties.AutomationId="{x:Static local:AutomationIds.AddEmptyRectangleButtonId}"
+                            Command="{Binding DrawRectCommand}"
+                            Width="120"
+                            Height="30"
+                            HorizontalAlignment="Right"
+                            Grid.Row="1" />
 
-                <Button Content="Draw Rect"
-                        AutomationProperties.AutomationId="{x:Static local:AutomationIds.AddEmptyRectangleButtonId}"
-                        Command="{Binding DrawRectCommand}"
-                        Width="120"
-                        Height="30"
-                        HorizontalAlignment="Right"
-                        Grid.Row="1" />
+                    <Button Content="Add Drawn Rect"
+                            Command="{Binding ResizeCommand}"
+                            AutomationProperties.AutomationId="{x:Static local:AutomationIds.AddDrawnRectangleButtonId}"
+                            MinWidth="120"
+                            Height="30"
+                            HorizontalAlignment="Right" />
 
-                <Button Content="Add Drawn Rect"
-                        Command="{Binding ResizeCommand}"
-                        AutomationProperties.AutomationId="{x:Static local:AutomationIds.AddDrawnRectangleButtonId}"
-                        MinWidth="120"
-                        Height="30"
-                        HorizontalAlignment="Right"
-                        Grid.Row="2" />
+                    <Button Command="{Binding AddPositionedRectangleCommand}"
+                            CommandParameter="{StaticResource FalseValue}"
+                            AutomationProperties.AutomationId="{x:Static local:AutomationIds.AddPositionedRectangleButtonId}"
+                            Width="120"
+                            Height="50"
+                            HorizontalAlignment="Right">
+                        <Button.Content>
+                            <TextBlock TextWrapping="Wrap"
+                                       TextAlignment="Center">
+                                Add positioned rect
+                            </TextBlock>
+                        </Button.Content>
+                    </Button>
 
-                <Button Command="{Binding DrawBezierCommand}"
-                        AutomationProperties.AutomationId="{x:Static local:AutomationIds.AddPositionedRectangleButtonId}"
-                        Width="120"
-                        Height="50"
-                        HorizontalAlignment="Right"
-                        Grid.Row="3">
-                    <Button.Content>
-                        <TextBlock TextWrapping="Wrap"
-                                   TextAlignment="Center">
-                            Add positioned rect
-                        </TextBlock>
-                    </Button.Content>
-                </Button>
+                    <Button Command="{Binding AddPositionedRectangleCommand}"
+                            CommandParameter="{StaticResource TrueValue}"
+                            AutomationProperties.AutomationId="{x:Static local:AutomationIds.AddImmutablePositionedRectangleButtonId}"
+                            Width="120"
+                            Height="50"
+                            HorizontalAlignment="Right">
+                        <Button.Content>
+                            <TextBlock TextWrapping="Wrap"
+                                       TextAlignment="Center">
+                                Add immutable rect
+                            </TextBlock>
+                        </Button.Content>
+                    </Button>
 
-                <Button Content="Draw Group"
-                        Command="{Binding DrawGroupCommand}"
-                        Width="120"
-                        Height="30"
-                        HorizontalAlignment="Right"
-                        Grid.Row="4" />
+                    <Button Content="Draw Group"
+                            Command="{Binding DrawGroupCommand}"
+                            Width="120"
+                            Height="30"
+                            HorizontalAlignment="Right" />
 
-                <Button Content="Clear All Items"
-                        Command="{Binding DeleteCommand}"
-                        AutomationProperties.AutomationId="{x:Static local:AutomationIds.ClearItemsButtonId}"
-                        Width="120"
-                        Height="30"
-                        HorizontalAlignment="Right"
-                        Grid.Row="5" />
-                <StackPanel Grid.Row="6"
+                    <Button Content="Clear All Items"
+                            Command="{Binding DeleteCommand}"
+                            AutomationProperties.AutomationId="{x:Static local:AutomationIds.ClearItemsButtonId}"
+                            Width="120"
+                            Height="30"
+                            HorizontalAlignment="Right" />
+                </StackPanel>
+                <StackPanel Grid.Row="1"
                             Visibility="{Binding ShowProperties, Converter={StaticResource BooleanToVisibilityConverter}}">
                     <views:PropertiesInfo DataContext="{Binding SelectedItem}" />
                 </StackPanel>
@@ -298,13 +308,13 @@
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Horizontal"
+            <!--<StackPanel Orientation="Horizontal"
                         Margin="2"
                         Grid.Column="1">
                 <TextBlock Text="Transform Offset: " />
                 <TextBlock Text="{Binding TranslateOffset, ElementName=source, Converter={StaticResource PointToStringConverter}}"
                            HorizontalAlignment="Left"></TextBlock>
-            </StackPanel>
+            </StackPanel>-->
             <StackPanel Orientation="Horizontal"
                         Margin="2"
                         Grid.Column="2">
@@ -322,8 +332,8 @@
             <StackPanel Orientation="Horizontal"
                         Grid.Column="4"
                         Margin="2">
-                <TextBlock Text="Bounding Box: " />
-                <TextBlock Text="{Binding ElementName=source, Path=ViewportRect.Location, StringFormat= '\{0\} (left, top)'}"></TextBlock>
+                <TextBlock Text="Translation: " />
+                <TextBlock Text="{Binding ElementName=source, Path=Translation, StringFormat= '\{0\} (left, top)'}"></TextBlock>
             </StackPanel>
             <StackPanel>
                 <TextBlock HorizontalAlignment="Left"
@@ -368,8 +378,6 @@
                               Command="{Binding AddTextCommand}" />
                     <MenuItem Header="Paste"
                               Command="{Binding PasteCommand}" />
-                    <MenuItem Header="Add View Preset"
-                              Command="{Binding AddViewPresetCommand}" />
                 </ContextMenu>
             </richCanvas:RichItemsControl.ContextMenu>
 
@@ -528,6 +536,9 @@
 
                     <Setter Property="Scale"
                             Value="{Binding Scale, Mode=TwoWay}" />
+
+                    <Setter Property="AllowScaleChangeToUpdatePosition"
+                            Value="{Binding AllowScaleChangeToUpdatePosition}" />
 
                     <Setter Property="ContextMenu">
                         <Setter.Value>
