Added helper methods for Gestures testing Added more DrawingStateTests Refactoring Added new todo coments for spotted problems Added Console Output for UITests.App project

--- a/RichCanvasUITests.App/MainWindow.xaml
+++ b/RichCanvasUITests.App/MainWindow.xaml
@@ -83,6 +83,7 @@
         <richCanvas:RichItemsControl Background="AliceBlue"
                                      ItemsSource="{Binding Items}"
                                      SelectedItem="{Binding SelectedItem}"
+                                     RealTimeDraggingEnabled="True"
                                      Name="source">
             <richCanvas:RichItemsControl.Resources>
                 <DataTemplate DataType="{x:Type local:RichItemContainerModel}">
