Refactor selection - Create two separate states for each selection type.
Created 2 separate states that are responsible for each selection type (single or multiple) + Fix selection bugs, add improvements and simplify code around selection logic.

--- a/RichCanvasTestApp/MainWindow.xaml
+++ b/RichCanvasTestApp/MainWindow.xaml
@@ -250,7 +250,7 @@
                             Height="30"
                             HorizontalAlignment="Right" />
 
-                    <Button Command="{Binding AddPositionedRectangleCommand}"
+                    <Button Command="{Binding SelectItemsTestCommand}"
                             CommandParameter="{StaticResource FalseValue}"
                             AutomationProperties.AutomationId="{x:Static local:AutomationIds.AddPositionedRectangleButtonId}"
                             Width="120"
@@ -366,8 +366,9 @@
                                      AutoPanTickRate="{Binding AutoPanTickRate, Converter={StaticResource StringToFloatConverter}}"
                                      SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
                                      RealTimeDraggingEnabled="True"
-                                     RealTimeSelectionEnabled="True"
-                                     VerticalScrollBarVisibility="{Binding VerticalScrollBarVisibility}">
+                                     RealTimeSelectionEnabled="False"
+                                     VerticalScrollBarVisibility="{Binding VerticalScrollBarVisibility}"
+                                     CanSelectMultipleItems="False">
             <!--TranslateOffset="{Binding TranslateOffset, Mode=TwoWay}"-->
 
             <richCanvas:RichItemsControl.ContextMenu>
